--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -402,6 +402,9 @@
      <height>21</height>
     </rect>
    </property>
+   <property name="nativeMenuBar">
+    <bool>true</bool>
+   </property>
    <widget class="QMenu" name="menu_propos">
     <property name="title">
      <string>Aide</string>
