--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -778,7 +778,7 @@
   </widget>
   <widget class="QDockWidget" name="dockOptions">
    <property name="windowTitle">
-    <string>Options</string>
+    <string>Destination</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>1</number>
