--- a/ui/startwindow.ui
+++ b/ui/startwindow.ui
@@ -9,20 +9,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>131</height>
+    <width>395</width>
+    <height>201</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Grabber - Premier lancement</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1,0">
    <item>
     <widget class="QLabel" name="welcomeLabel">
      <property name="text">
-      <string>Avant de commencer, le programme a besoin de quelques informations nécéssaires à son bon fonctionnement. Vous pouvez ignorer cette étape, et les dites informations vous seront demandées en temps et en heure.
-
-Voulez-vous régler ces options maintenant ? Vous devez régler le dossier de sauvegarde ainsi que les noms de fichier.</string>
+      <string>Avant de commencer, le programme a besoin de quelques informations nécéssaires à son bon fonctionnement. Vous pouvez ignorer cette étape, et les dites informations vous seront demandées en temps et en heure.</string>
      </property>
      <property name="textFormat">
       <enum>Qt::AutoText</enum>
@@ -36,19 +34,114 @@ Voulez-vous régler ces options maintenant ? Vous devez régler le dossier de sa
     </widget>
    </item>
    <item>
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::No|QDialogButtonBox::Yes</set>
-     </property>
-    </widget>
+    <layout class="QFormLayout" name="layoutSettings">
+     <item row="0" column="0">
+      <widget class="QLabel" name="labelLanguage">
+       <property name="text">
+        <string>Langue</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="labelFolder">
+       <property name="text">
+        <string>Dossier</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <layout class="QHBoxLayout" name="layoutFolder" stretch="1,0">
+       <item>
+        <widget class="QLineEdit" name="lineFolder"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="buttonFolder">
+         <property name="text">
+          <string>Parcourir</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="labelFormat">
+       <property name="text">
+        <string>Format</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <layout class="QHBoxLayout" name="layoutFilename">
+       <item>
+        <widget class="QLineEdit" name="lineFilename"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="buttonFilenamePlus">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>30</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="labelSource">
+       <property name="text">
+        <string>Source</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QComboBox" name="comboLanguage"/>
+     </item>
+     <item row="1" column="1">
+      <widget class="QComboBox" name="comboSource"/>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="buttonOptions">
+       <property name="text">
+        <string>Options</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QDialogButtonBox" name="buttonBox">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="standardButtons">
+        <set>QDialogButtonBox::Ignore|QDialogButtonBox::Ok</set>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
  <tabstops>
-  <tabstop>buttonBox</tabstop>
+  <tabstop>comboLanguage</tabstop>
+  <tabstop>comboSource</tabstop>
+  <tabstop>lineFolder</tabstop>
+  <tabstop>buttonFolder</tabstop>
+  <tabstop>lineFilename</tabstop>
+  <tabstop>buttonFilenamePlus</tabstop>
+  <tabstop>buttonOptions</tabstop>
  </tabstops>
  <resources/>
  <connections>
@@ -84,5 +177,24 @@ Voulez-vous régler ces options maintenant ? Vous devez régler le dossier de sa
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>buttonOptions</sender>
+   <signal>clicked()</signal>
+   <receiver>startWindow</receiver>
+   <slot>openOptions()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>51</x>
+     <y>178</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>4</x>
+     <y>175</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
+ <slots>
+  <slot>openOptions()</slot>
+ </slots>
 </ui>
