--- a/ui/filenamewindow.ui
+++ b/ui/filenamewindow.ui
@@ -55,6 +55,9 @@
      <property name="text">
       <string/>
      </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item>
