--- a/ui/optionswindow.ui
+++ b/ui/optionswindow.ui
@@ -81,7 +81,7 @@
         </item>
         <item>
          <property name="text">
-          <string>Noms multiples</string>
+          <string>Noms conditionnels</string>
          </property>
         </item>
         <item>
@@ -1108,6 +1108,13 @@ p, li { white-space: pre-wrap; }
            </item>
           </layout>
          </item>
+         <item row="7" column="0" colspan="2">
+          <widget class="QRadioButton" name="radioArtistsMultiple">
+           <property name="text">
+            <string>Un fichier par tag</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
        <widget class="QWidget" name="pageSaveCopyrights">
@@ -1205,7 +1212,7 @@ p, li { white-space: pre-wrap; }
            </property>
           </widget>
          </item>
-         <item row="7" column="0" colspan="2">
+         <item row="8" column="0" colspan="2">
           <widget class="QCheckBox" name="checkCopyrightsUseShorter">
            <property name="text">
             <string>Utiliser le plus court si possible</string>
@@ -1219,6 +1226,13 @@ p, li { white-space: pre-wrap; }
           <widget class="QRadioButton" name="radioCopyrightsKeepAll">
            <property name="text">
             <string>Garder tous les tags</string>
+           </property>
+          </widget>
+         </item>
+         <item row="7" column="0" colspan="2">
+          <widget class="QRadioButton" name="radioCopyrightsMultiple">
+           <property name="text">
+            <string>Un fichier par tag</string>
            </property>
           </widget>
          </item>
@@ -1323,6 +1337,13 @@ p, li { white-space: pre-wrap; }
           <widget class="QRadioButton" name="radioCharactersKeepAll">
            <property name="text">
             <string>Garder tous les tags</string>
+           </property>
+          </widget>
+         </item>
+         <item row="7" column="0" colspan="2">
+          <widget class="QRadioButton" name="radioCharactersMultiple">
+           <property name="text">
+            <string>Un fichier par tag</string>
            </property>
           </widget>
          </item>
