Update a few icons

--- a/resources.qrc
+++ b/resources.qrc
@@ -15,7 +15,6 @@
         <file>images/icons/save.png</file>
         <file>images/icons/window.png</file>
         <file>images/icons/book.png</file>
-        <file>images/icons/tab.png</file>
         <file>images/icons/hidden.png</file>
         <file>images/icons/showed.png</file>
         <file>images/icons/update.png</file>
@@ -45,5 +44,6 @@
         <file>images/icons/tab-minus.png</file>
         <file>images/icons/tab-plus.png</file>
         <file>images/icons/bug.png</file>
+        <file>images/icons/tab-poolplus.png</file>
     </qresource>
 </RCC>
