--- a/ui/batchwindow.ui
+++ b/ui/batchwindow.ui
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Grabber - Téléchargement groupé</string>
+   <string>Téléchargement groupé</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../resources.qrc">
