--- a/ui/filenamewindow.ui
+++ b/ui/filenamewindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Grabber - Nommage</string>
+   <string>Nommage</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
