--- a/ui/optionswindow.ui
+++ b/ui/optionswindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>666</width>
-    <height>443</height>
+    <height>453</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -161,7 +161,7 @@
         </sizepolicy>
        </property>
        <property name="currentIndex">
-        <number>7</number>
+        <number>0</number>
        </property>
        <widget class="QWidget" name="pageGeneral">
         <layout class="QFormLayout" name="formLayout_14">
@@ -334,6 +334,13 @@
          <item row="13" column="1">
           <widget class="QLineEdit" name="lineAdd"/>
          </item>
+         <item row="15" column="0" colspan="2">
+          <widget class="QCheckBox" name="checkConfirmClose">
+           <property name="text">
+            <string>Demander confirmation avant la fermeture de la fenêtre</string>
+           </property>
+          </widget>
+         </item>
         </layout>
         <zorder>label</zorder>
         <zorder>comboLanguages</zorder>
@@ -356,6 +363,7 @@
         <zorder>label_64</zorder>
         <zorder>label_65</zorder>
         <zorder>lineAdd</zorder>
+        <zorder>checkConfirmClose</zorder>
        </widget>
        <widget class="QWidget" name="pageSources">
         <layout class="QFormLayout" name="formLayout_2">
@@ -2400,6 +2408,7 @@ p, li { white-space: pre-wrap; }
   <tabstop>checkAutocompletion</tabstop>
  </tabstops>
  <resources>
+  <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
  </resources>
  <connections>
