--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -427,6 +427,7 @@
     <addaction name="actionBlacklistFix"/>
     <addaction name="actionEmptyDirsFix"/>
     <addaction name="actionMd5Fix"/>
+    <addaction name="actionRenameExistingImages"/>
     <addaction name="separator"/>
     <addaction name="actionOptions"/>
    </widget>
@@ -1082,6 +1083,11 @@
     <string>Reporter un problème</string>
    </property>
   </action>
+  <action name="actionRenameExistingImages">
+   <property name="text">
+    <string>Rename existing images</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -1111,6 +1117,7 @@
   <tabstop>buttonSaveSettings</tabstop>
  </tabstops>
  <resources>
+  <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
  </resources>
  <connections>
@@ -1626,6 +1633,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionRenameExistingImages</sender>
+   <signal>triggered()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>renameExisting()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>270</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>help()</slot>
@@ -1670,5 +1693,6 @@
   <slot>openSettingsFolder()</slot>
   <slot>aboutWebsite()</slot>
   <slot>aboutReportBug()</slot>
+  <slot>renameExisting()</slot>
  </slots>
 </ui>
