--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -1093,7 +1093,7 @@
   <customwidget>
    <class>QClosableTabWidget</class>
    <extends>QTabWidget</extends>
-   <header>qclosabletabwidget.h</header>
+   <header>ui/qclosabletabwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
